Se actualizan descripciones de los planes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 									<img src="http://bread.pp.ua/n/settings_b.svg" alt="">
 									<big>Vip</big>
 								</li>
-								<li>Responsive Design</li>
+								<li>Se cambia la descripcion de este apartado</li>
 								<li>Color Customization</li>
 								<li>HTML5 & CSS3</li>
 								<li>Styled elements</li>
